test/compile_errors/err_embed_file_absolute_path.w
//! expect-check-fail: outside the package root

const DATA: str = embed_file("/etc/hosts")

fn main:
    let _ = DATA
